public interface Tarjeta {
    public Entrada comprarEntrada(Entrada entrada);
}
