public class TipoA extends Entrada{

    public TipoA(Monto precio){
        super(precio);
    }

}
