public class TipoB extends Entrada{
    TipoB(Monto precio) {
        super(precio);
    }
}
